--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -1,9 +1,9 @@
 name: GitHub Actions Demo
 
 on:
-  push:
-    tags:
-      - '*'
+  push
+#    tags:
+#      - '*'
 
 jobs:
   Explore-GitHub-Actions:
@@ -21,3 +21,4 @@ jobs:
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
       - run: echo "github.ref_name is ${{ github.ref_name }}"
+      - run: cat test
