--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -23,7 +23,4 @@ jobs:
       - run: echo "github.ref_name is ${{ github.ref_name }}"
       - run: echo "version=${{ github.ref_name }}" >> $GITHUB_ENV
       - run: echo "env var = ${{ env.version }}"
-      - run: cat test
-        env: version: ${{ env.version }}
-      - run: cat test
-        env: release: ${{ env.version }}
+      - run: echo "env var $version"
