Use env in script

--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -24,3 +24,4 @@ jobs:
       - run: echo "version=${{ github.ref_name }}" >> $GITHUB_ENV
       - run: echo "env var = ${{ env.version }}"
       - run: echo "env var $version"
+      - run: ./run.sh
