--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -2,8 +2,8 @@ name: GitHub Actions Demo
 
 on:
   push
-#    tags:
-#      - '*'
+    tags:
+      - '*'
 
 jobs:
   Explore-GitHub-Actions:
@@ -22,6 +22,11 @@ jobs:
       - run: echo "🍏 This job's status is ${{ job.status }}."
       - run: echo "github.ref_name is ${{ github.ref_name }}"
       - run: echo "version=${{ github.ref_name }}" >> $GITHUB_ENV
+      - run: echo "remove v if exsits ${{ github.ref_name//v }}"
+      - run: echo "print last digit: ${{ github.ref_name##*. }}"
+      - run: echo "print first part without v: ${{ RELEASE%.* }}"
+        env:
+          RELEASE: ${{ github.ref_name//v }}
       - run: echo "env var = ${{ env.version }}"
       - run: echo "env var $version"
       - run: ./run.sh
