--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -22,11 +22,11 @@ jobs:
       - run: echo "🍏 This job's status is ${{ job.status }}."
       - run: echo "github.ref_name is ${{ github.ref_name }}"
       - run: echo "version=${{ github.ref_name }}" >> $GITHUB_ENV
-      - run: echo "remove v if exsits ${version//v}"
+      - run: echo "remove v if exsits = ${version//v}"
       - run: echo "print last digit = ${version##*.}"
       - run: echo "print first part without v = ${RELEASE%.*}"
         env:
-          RELEASE: ${github.ref_name//v}
+          RELEASE: ${version//v}
       - run: echo "env var = ${{ env.version }}"
-      - run: echo "env var $version"
+      - run: echo "env var = $version"
       - run: ./run.sh
