--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -32,8 +32,10 @@ jobs:
       - run: echo "print first part without v = ${tag%.*}"
       - run: echo "env var = ${{ env.tag }}"
       - run: echo "env var = $tag"
-      - run: |
+      - name: replace variable
+        run: |
           sed -i s/\${version}/${fullversion%.*}/ test
           sed -i s/\${release}/${fullversion##*.}/ test
           cat test
+      - run: cat test
       - run: ./run.sh
