--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -36,6 +36,8 @@ jobs:
         run: |
           sed -i s/\${version}/${fullversion%.*}/ test
           sed -i s/\${release}/${fullversion##*.}/ test
+          sed -i s/\$VERSION/${fullversion%.*}/ test
+          sed -i s/\$RELEASE/${fullversion##*.}/ test
           cat test
       - run: cat test
       - run: ./run.sh
