Comment out test

--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -34,14 +34,14 @@ jobs:
       - run: echo "env var = $tag"
       - name: replace variable
         run: |
-          sed -i s/\${version}/${fullversion%.*}/ test
-          sed -i s/\${release}/${fullversion##*.}/ test
+#          sed -i s/\${version}/${fullversion%.*}/ test
+#          sed -i s/\${release}/${fullversion##*.}/ test
           sed -i s/\$VERSION/${fullversion%.*}/ rpm/test.spec
           sed -i s/\$RELEASE/${fullversion##*.}/ rpm/test.spec
-          cat test
-      - run: cat test
+#          cat test
+#      - run: cat test
       - run: cat rpm/test.spec
-      - run: ./run.sh
+#      - run: ./run.sh
 
       - name: build rpm
         id: build-rpm
