--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -34,6 +34,7 @@ jobs:
       - run: echo "env var = $tag"
       - name: replace variable
         run: |
+#          sed -i s/\$VERSION/${fullversion%.*}/ rpm/test.spec
           sed -i s/\$VERSION/${fullversion%.*}/ rpm/test.spec
           sed -i s/\$RELEASE/${fullversion##*.}/ rpm/test.spec
       - run: cat rpm/test.spec
